This file summarizes changes in WinMerge releases.
Numbers in parentheses refer to SourceForge.net tracker item numbers (#XXXXX) or
to Subversion revision numbers (rXXXXX). To open the tracker item, go to URL:
http://winmerge.org/tracker/[tracker-id]

WinMerge 2.11.1.8
  Add option to show Open-dialog on WinMerge startup (#2327424)
  Add Git to Source Control filter and fix ignore file rules (#2329381)
  Bugfix: Move confirmation dialog sometimes had wrong paths (#2327565, #2309190)
  Translation updates:
  - German (r6130)
  - Swedish (#2318778)

WinMerge 2.11.1.7 - 2008-11-20 (r6112)
  Add shell context menu to folder compare context menu (#2189315)
  Update PCRE to version 7.8 (#2209911)
  Show missing lines in location pane for diffs having both different
    and missing lines (#2119235)
  Syntax highlighting for Verilog files (#2231145)
  Tweak new "equal file" icon a little bit (#2312381)
  Readme update (#2234689)
  Translation updates:
  - Brazilian (#2219568)
  - Czech (r6034)
  - Swedish (#2215167, #2236651)

WinMerge 2.11.1.6 - 2008-10-23 (r6033)
  General compare status for files (not known if text/binary) (#2175736)
  Change icons for the new general compare status (#2185302)
  Use 24bit icons for "Bookmarks" and "Delete" menu items (#2141184)
  Installer: create backup of ClearCase config file (#2129095)
  BugFix: Translatable strings having space before colon (#1971868)
  BugFix: Wrong cursor position when disabling selection margin (#2138555)
  BugFix: Showed a black line when disabling selection margin (#2068790)
  BugFix: Fix manual URL in Readme.txt (#2181628)
  BugFix: Long unique paths were mixed up in folder compare view (#2129634)
  BugFix: Some calls made to plugins when plugins were disabled (#2182788)
  BugFix: If messagebox was shown during file loading location pane
    didn't show any differences (#2101780)

WinMerge 2.11.1.5 - 2008-10-02 (r5995)
  Use external editor to edit file filters (#2082774)